border added to images, and other styling tweeks
co-authored-by: Ryan Broadsword <rbroadsword@gmail.com>
co-authored-by: Sean Keane <keane93@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,19 @@
 .Clifford {
-
+padding: 1rem; 
 }
 
 .Cthulhu {
-
+padding: 1rem;
 }
 
 .Garfield {
-  
+padding: 1rem; 
+}
+
+.total {
+  display: flex;
+  border: 5px solid blue;
+  margin: auto;
+  box-sizing: border-box;
+  justify-content: space-evenly;
 }
